# sde4mbrl_px4

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
include/: geometric_controller.h
launch/: geoctrl.launch  hexa_posctrl_mpc.yaml  hexa_px4.launch  hexa_sdectrl.launch  hexa_sitl_posctrl_mpc.yaml  hexa_sitl_sdectrl.launch  hexa_sitl_traj_mpc.yaml  hexa_traj_mpc.yaml  iris_geoctrl.yaml  iris_model_prior.yaml  iris_mpc_sde.yaml  iris_sdectrl.launch  iris_sitl_posctrl_mpc.yaml  iris_sitl_traj_mpc.yaml  lowbd_pluginlists.yaml  new_analyze_mpc_v2.xml  new_analyze_mpc_v3.xml  params_hexa_ahg.params  pj_setpoint_layout.xml  px4_sitl.launch  rviz_config.rviz  sdectrl.launch
mpc4px4/: basic_control.py  helper.py  input_command.py
mpc4px4/geometric_controller/: geometric_controller.cpp
mpc4px4/modelling/: cfg_sitl_iris.yaml  filter_data_analysis.ipynb  parameters_analysis.ipynb  quad_model.py  sde_quad_model.py  smoothing_data.py  train_static_model.py
mpc4px4/modelling/iris/: filter_data_analysis.ipynb  iris_prior.yaml  optimizer_iris_prior.yaml  optimizer_iris_sde.yaml  parameters_analysis.ipynb  sde_learned_analysis.ipynb
mpc4px4/mpc_controller/: sde_control.py
msg/: OptMPCState.msg
scripts/: hexa_route_mavlink.sh  router_hexa.conf  router_sitl.conf  sitl_route_mavlink.sh
sde4mbrl_px4/: basic_control.py  input_command.py
sde4mbrl_px4/geometric_controller/: geometric_controller.cpp
sde4mbrl_px4/mpc_controller/: sde_control.py
srv/: FollowTraj.srv  LoadTrajAndParams.srv
