<?xml version="1.0"?>
<package format="2">
  <name>mpc4px4</name>
  <version>0.0.1</version>
  <description>A ROS package for PX4 control using Neural SDE-Based Model Predictive Control</description>
  <maintainer email="frmbouwe@gmail.com">Franck Djeumou</maintainer>
  <license>GNU Public License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

   <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
